--- a/index.html
+++ b/index.html
@@ -5,8 +5,18 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Education House</title>
+    <link rel="stylesheet" href="styles.css">
 </head>
 <body>
-    <h1>Welcome</h1>
+    <header>
+        <img id="logo" src="C:\Users\Пользователь\Desktop\logo.png">
+        <nav>
+            <ul>
+                <li><a href="#about">ABOUT US</a></li>
+                <li><a href="#price">OUR PRICES</a></li>
+                <li><a href="#contact">CONTUCT US</a></li>
+            </ul>
+        </nav>
+    </header>
 </body>
 </html>
