--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
             <ul>
                 <li><a href="#about">ABOUT US</a></li>
                 <li><a href="#price">OUR PRICES</a></li>
-                <li><a href="#contact">CONTUCT US</a></li>
+                <li><a href="#contact">CONTACT US</a></li>
             </ul>
         </nav>
     </header>
