--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 <body>
     <header>
         <img id="logo" src="C:\Users\Пользователь\Desktop\logo.png">
-        <nav>
+        <nav class="navbar">
             <ul>
                 <li><a href="#about">ABOUT US</a></li>
                 <li><a href="#price">OUR PRICES</a></li>
@@ -18,8 +18,27 @@
             </ul>
         </nav>
     </header>
+    <section class="showcase-area" id="showcase">
+        <div class="showcase-container">
+            <p>Welcome to</p>
+            <h1>Education House Language School</h1>
+            <p>English classes for all ages and levels</p>
+        </div>
+    </section>
+    <section id="about">
+        <div>About us
+
+        </div>
+    </section>
+    <section id="price">
+        <div>Our prices
+
+        </div>
+    </section>
+    <section id="contact">
+        <div>Contact us
+
+        </div>
+    </section>
 </body>
-    <div></div>
-    <div></div>
-    <div></div>
 </html>
