--- a/index.html
+++ b/index.html
@@ -24,6 +24,9 @@
             <h1>Education House Language School</h1>
             <p>English classes for all ages and levels</p>
         </div>
+        <div>
+            <image id="online" src="C:\Users\Пользователь\Desktop\showcase.jpeg" alt="online-lesson"></image>
+        </div>
     </section>
     <section id="about">
         <div>About us
