--- a/index.html
+++ b/index.html
@@ -12,9 +12,9 @@
         <img id="logo" src="C:\Users\Пользователь\Desktop\logo.png">
         <nav class="navbar">
             <ul>
-                <li><a href="#about">ABOUT US</a></li>
-                <li><a href="#price">OUR PRICES</a></li>
-                <li><a href="#contact">CONTACT US</a></li>
+                <li><a href="#about">About Us</a></li>
+                <li><a href="#price">Our Prices</a></li>
+                <li><a href="#contact">Contact Us</a></li>
             </ul>
         </nav>
     </header>
