--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 </head>
 <body>
     <header>
-        <img id="logo" src="C:\Users\Пользователь\Desktop\logo.png">
+        <img id="logo" src="img/logo.png">
         <nav class="navbar">
             <ul>
                 <li><a href="#about">About Us</a></li>
