--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 </head>
 <body>
     <header>
-        <img id="logo" src="img/logo.png">
+        <a href="#home"><img id="logo" src="img/logo.png"></a>
         <nav class="navbar">
             <ul>
                 <li><a href="#about">About Us</a></li>
@@ -18,13 +18,12 @@
             </ul>
         </nav>
     </header>
-    <section class="showcase-area" id="showcase">
+    <section class="showcase-area" id="home">
         <div class="showcase-container">
             <p>Welcome to</p>
             <h1>Education House Language School</h1>
             <p>English classes for all ages and levels</p>
-        </div>
-        
+        </div>      
     </section>
     <section id="about">
         <div>About us
