--- a/index.html
+++ b/index.html
@@ -26,9 +26,13 @@
         </div>      
     </section>
     <section id="about">
-        <div>About us
-
+        <div></div>
+        <div id="info">
+            <p>Education House is a trusted online English education school for children. 
+                We provide one-on-one and small group English classes for students from pre-school to high school. 
+                With qualified and experienced native English teachers, Education House has helped thousands of students learn and improve their English skills.</p>
         </div>
+        <div id=""></div>
     </section>
     <section id="price">
         <div>Our prices
