--- a/index.html
+++ b/index.html
@@ -40,8 +40,25 @@
         </div>
     </section>
     <section id="contact">
-        <div>Contact us
-
+        <div id="school-info">
+            <p>Education House Language School
+               75/43 Romklao soi 1
+               Saen Saeb, Minburi
+               Bangkok 10510
+            </p>
+            <p>TEL: 02-919-5102
+               E-mail: info@eh.ac.th
+            </p>
+            <p>Monday – Friday: 12.00 – 20.00
+               Weekends: 09.00 – 20.00
+            </p>            
+        </div>
+        <div id="personal-info">
+            <label>Name<input type="text" required></label>
+            <label>Age<input type="number" required></label>
+            <label>Phone number<input type="text" required></label>
+            <label>Line ID<input type="text"></label>
+            <label>What time can we call you?<textarea rows="3" cols="30"></textarea></label>
         </div>
     </section>
 </body>
