--- a/index.html
+++ b/index.html
@@ -41,25 +41,28 @@
     </section>
     <section id="contact">
         <div id="school-info">
-            <p>Education House Language School
-               75/43 Romklao soi 1
-               Saen Saeb, Minburi
-               Bangkok 10510
-            </p>
-            <p>TEL: 02-919-5102
-               E-mail: info@eh.ac.th
-            </p>
-            <p>Monday – Friday: 12.00 – 20.00
-               Weekends: 09.00 – 20.00
-            </p>            
+            <p>Education House Language School</p>
+            <p>75/43 Romklao soi 1</p>
+            <p>Saen Saeb, Minburi</p>
+            <p>Bangkok 10510</p>
+            <p>TEL: 02-919-5102</p>
+            <p>E-mail: info@eh.ac.th</p>
+            <p>Monday – Friday: 12.00 – 20.00</p>
+            <p>Weekends: 09.00 – 20.00</p>            
         </div>
         <div id="personal-info">
-            <label>Name<input type="text" required></label>
-            <label>Age<input type="number" required></label>
-            <label>Phone number<input type="text" required></label>
-            <label>Line ID<input type="text"></label>
-            <label>What time can we call you?<textarea rows="3" cols="30"></textarea></label>
+            <label>Name:</label>
+            <input type="text" required>
+            <label>Age:</label>
+            <input type="number" required>
+            <label>Phone number:</label>
+            <input type="text" required>
+            <label>Line ID:</label>
+            <input type="text">
+            <label>What time can we call you?</label>
+            <textarea rows="3" cols="30"></textarea>
         </div>
+        <div id="map">GOOGLE MAP SHOULD BE HERE</div>
     </section>
 </body>
 </html>
