--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Education House</title>
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.9.1/font/bootstrap-icons.css" integrity="sha384-xeJqLiuOvjUBq3iGOjvSQSIlwrpqjSHXpduPd6rQpuiM3f5/ijby8pCsnbu5S81n" crossorigin="anonymous">
     <link rel="stylesheet" href="styles.css">
 </head>
 <body>
@@ -40,15 +41,27 @@
         </div>
     </section>
     <section id="contact">
+        <div id="contact-us">
+            <h2>Contact Us<h2>
+        </div>
         <div id="school-info">
-            <p>Education House Language School</p>
-            <p>75/43 Romklao soi 1</p>
-            <p>Saen Saeb, Minburi</p>
-            <p>Bangkok 10510</p>
-            <p>TEL: 02-919-5102</p>
-            <p>E-mail: info@eh.ac.th</p>
-            <p>Monday – Friday: 12.00 – 20.00</p>
-            <p>Weekends: 09.00 – 20.00</p>            
+            <div id="icon"><i class="fa fa-map-marker" aria-hidden="true"></i></div>
+            <div id="school">
+                <p>75/43 Romklao soi 1 <br>Saen Saeb, Minburi <br>Bangkok 10510</p>
+            </div>
+            <div id="icon"><i class="fa fa-phone" aria-hidden="true"></i></div>
+            <div id="school">
+                <p>02-919-5102</p>
+            </div>
+            <div id="icon"><i class="fa fa-envelope" aria-hidden="true"></i></div>
+            <div id="school">
+                <p>info@eh.ac.th</p>
+            </div>
+            <div id="icon"><i class="fa fa-clock-o" aria-hidden="true"></i></div>
+            <div id="school">
+                <p>Monday – Friday: 12.00 – 20.00</p>
+                <p>Weekends: 09.00 – 20.00</p>
+            </div>            
         </div>
         <div id="personal-info">
             <label>Name:</label>
