--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
             <p>English classes for all ages and levels</p>
         </div>      
     </section>
-    <section id="about">
+    <section class="about-info" id="about">
         <div></div>
         <div id="info">
             <p>Education House is a trusted online English education school for children. 
@@ -34,16 +34,16 @@
         </div>
         <div id=""></div>
     </section>
-    <section id="price">
+    <section class="pricing" id="price">
         <div>Our prices
 
         </div>
     </section>
-    <section id="contact">
-        <div id="contact-us">
+    <section class="contact-info" id="contact">
+        <div class="box1" id="contact-us">
             <h2>Contact Us<h2>
         </div>
-        <div id="school-info">
+        <div class="box2" id="school-info">
             <div id="icon"><i class="fa fa-map-marker" aria-hidden="true"></i></div>
             <div id="school">
                 <p>75/43 Romklao soi 1 <br>Saen Saeb, Minburi <br>Bangkok 10510</p>
@@ -62,19 +62,17 @@
                 <p>Weekends: 09.00 – 20.00</p>
             </div>            
         </div>
-        <div id="personal-info">
-            <label>Name:</label>
+        <div class="box3" id="personal-info">
+            <label>Full Name:</label>
             <input type="text" required>
-            <label>Age:</label>
-            <input type="number" required>
             <label>Phone number:</label>
             <input type="text" required>
             <label>Line ID:</label>
             <input type="text">
             <label>What time can we call you?</label>
             <textarea rows="3" cols="30"></textarea>
+            <button type="button">Submit</button>
         </div>
-        <div id="map">GOOGLE MAP SHOULD BE HERE</div>
     </section>
 </body>
 </html>
